--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,16 @@
 		"minishell.h": "c",
 		"ios": "c",
 		"complex": "c",
-		"__node_handle": "c"
+		"__node_handle": "c",
+		"stdio.h": "c",
+		"__hash_table": "c",
+		"array": "c",
+		"bitset": "c",
+		"initializer_list": "c",
+		"string": "c",
+		"string_view": "c",
+		"unordered_map": "c",
+		"utility": "c",
+		"vector": "c"
 	}
 }
