--- a/cocobolo/Makefile
+++ b/cocobolo/Makefile
@@ -21,7 +21,7 @@ SRCS = $(foreach L, ${SRCSPATH}, $(wildcard ${L}*.c))
 OBJS =  $(foreach L, ${SRCSPATH}, $(patsubst ${L}%.c, ${OBJSPATH}%.o, ${SRCS}))
 
 CC = gcc
-DEBUG = -fsanitize=address
+DEBUG = -g #-fsanitize=address
 CFLAGS = $(foreach H, ${INCPATH}, -I${H}) ${DEBUG} #-Wall -Wextra -Werror
 
 all : ${OBJSPATH} ${NAME}
