--- a/cocobolo/Makefile
+++ b/cocobolo/Makefile
@@ -22,8 +22,8 @@ OBJS =  $(foreach L, ${SRCSPATH}, $(patsubst ${L}%.c, ${OBJSPATH}%.o, ${SRCS}))
 
 CC = gcc
 # DEBUG = -fsanitize=address
-# DEBUG = -g
-CFLAGS = $(foreach H, ${INCPATH}, -I${H}) ${DEBUG} #-Wall -Wextra -Werror
+DEBUG = -g
+CFLAGS = $(foreach H, ${INCPATH}, -I${H})  ${DEBUG} #-Wall -Wextra -Werror
 
 all : ${OBJSPATH} ${NAME}
 
